# malicious-pr-bench

./: .coverage  .env.example  .gitignore  CLUSTERING_METHODOLOGY.md  README.md  README_hf.md  TABLE1_METHODOLOGY.md  VISUALIZATIONS_GUIDE.md  analyze_advanced_cwe_framing.py  analyze_cwe_framing_clustering.py  analyze_model_and_framing_clustering.py  analyze_nips_checkpoint_clustering.py  analyze_paper_results_clustering.py  analyze_raw_logs.py  benchmark.sh  generate_all_visualizations.py  generate_nips_scatter_plots.py  generate_nips_scatter_plots_v2.py  generate_nips_scatter_plots_v3.py  generate_scatter_plots.py  message_counts_retained_split.json  nips_frontier_results_by_framing.json  nips_results_with_srr_retained_split.json  nips_run_completion_status.json  paper_results_analysis.json  pyproject.toml  retained_results_analysis.json  retained_split_clustering_results.json  retry.py  setup_test.sh  test_clone.py  test_clone.sh
benchmark/: benign_task.py  cli_solver.py  config.py  dataset.py  docker_cleanup.py  gitea.py  metadata.py  registry.py  scoring.py  task.py  task_pov.py  tools.py  utils.py
docs/: README.md  axis_mapping.json  generate_leaderboard.py  index.html  index.html.bak  leaderboard.js  leaderboard_data.json  template.html
proof_of_vulnerability/: config.py  prompts.py  stream.py  task.py  utils.py
scripts/: Dockerfile.sandbox  Dockerfile.sandbox-copilot  Dockerfile.sandbox-reviewer  Dockerfile.sandbox.pov  analyse_benign_results.py  analyse_results.py  analyze_results.py  cwe_map.sh  docker-compose.yml  explore_nips_completion.py  reset.sh  (+13 more)
(+335 files in other folders)
