[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "malicious-pr-bench"
version = "0.1.0"
description = "Reproducible benchmark for detecting malicious pull requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.188",
    "huggingface_hub>=0.23.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["benchmark*"]
