[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "malicious-pr-bench"
version = "0.1.0"
description = "Reproducible benchmark for detecting malicious pull requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.188",
    "huggingface_hub>=0.23.0",
    "requests>=2.31.0",
    "structlog>=22.1.0",
    "openai>=2.29.0",
    "azure-identity>=1.25.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=benchmark --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
